--- a/src/components/TodosColumn/index.css
+++ b/src/components/TodosColumn/index.css
@@ -4,28 +4,28 @@
     flex-direction: column;
     padding: 15px;
     border-radius: 5px;
-    background-color: rgb(50,195,205);
+    background-color: rgb(50, 195, 205);
 }
 
-.todos-column__header{
+.todos-column__header {
     font-size: 30px;
     color: white;
 }
 
-.todos-column--completed{
-    background-color: rgb(235,103,80);
+.todos-column--completed {
+    background-color: rgb(235, 103, 80);
 }
 
-.todos-column--drag-active{
-    background-color: rgb(0,221,236);
+.todos-column--drag-active {
+    background-color: rgb(0, 221, 236);
 }
 
-.todos-column--drag-completed{
-    background-color: rgb(255,38,0);
+.todos-column--drag-completed {
+    background-color: rgb(255, 38, 0);
 }
 
-@media (max-width: 700px){
-    .todos-column{
+@media (max-width: 700px) {
+    .todos-column {
         width: 95%;
         margin-bottom: 10px;
     }
